# lbpy

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
_dev/: fs.ipynb
_dev/pkl/: tester.pkl
_dev/text/: hello.txt
lbpy/: __init__.py  excelwriter.py  fs.py
