[project]
name = "lbpy"
version = "0.1.0"
description = "My personal Python Package"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kittipos Sirivongrungson"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"